2019-09-13 Wiley E. Hill <wileyhill@gmail.com>

    * gtksheet/gtkcompat.h: Define gdk_cursor_destroy when not defined.

2019-09-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Reduce scope of GtkTableChild and GtkBoxChild,
      replace dynamic cast with static cast to GtkWidget, and utilize
      gtk_container_get_children in function gtk_sheet_get_entry.

    * src/x_dialog.c: Remove call to deprecated gtk_window_position x_dialog_column_visibility.

    * src/x_gtksheet.c: Remove GtkSignalFunc cast in SetupCSheetHandlers.

2019-09-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkitementry.c: Add ancillary pointer to GtkStyle and GdkGC
      in _item_entry_get_insertion_cursor_gc to improve readability and eliminate
      early return.

2019-09-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib.c: Revise/update internal documentation.

    * src/s_object.c: Rename s_object_delete_text_object_in_object ->
      s_object_delete_text_object. Remove function s_object_has_sym_file.

    * src/x_gtksheet.c: Add x_gtksheet_get_is_empty function documentation.

2019-08-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_table.c: Revise s_table_gtksheet_to_table function documentation.

    * src/x_fileselect.c: Relocate the call to gtk_recent_manager_add_item
      from x_fileselect_open to x_fileselect_load_file.

    * src/x_gtksheet.c Wrap translatables in gettext macro.

2019-07-18 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.

    * po/bg.po: Update Bulgarian translations.

    * po/ca.po: Update Catalan translations.

    * po/el.po: Update Greek translations.

    * po/ja.po: Update Japanese translations

    * po/nl.po: Update Dutch translations.

2019-07-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_toplevel.c: Add documentation for s_toplevel_init_data_set.

2019-06-24 Wiley E. Hill <wileyhill@gmail.com>
